dh-python (1.20131021-2) UNRELEASED; urgency=low

  * dh_python3, dh_pypy: add support for debian/package.pyremove files
  * dh_python3: add multiarch tuples to all already tagged extensions if
    when more than one Python 3 version is supported (closes: 733128)
  * Make sure only first line is taken into account while checking shebangs
    (closes: 732308)

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 05 Nov 2013 22:57:20 +0100

dh-python (1.20131021-1) unstable; urgency=low

  * dh_python2: fix renaming debug extensions with multiarch tuples

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 21 Oct 2013 20:52:04 +0200

dh-python (1.20131017-1) unstable; urgency=low

  [ Stefano Rivera ]
  * distutils build plugin: use default interpreter symlink in build step as
    well as the install step (if interpreter version matches the default one).
    So that shebangs in setuptools scripts.

  [ Piotr Ożarowski ]
  * dh_python2: searching for packages with egg-info fixed
  * dh_python2: fix public module version detection (regression)
  * dh_py*: "so" files no longer detected as extensions (closes: 726616)
  * pybuild: set PYTHON_LIBRARY and PYTHON_INCLUDE_DIR in cmake build
    plugin's configure step

  [ B. Clausius ]
  * pybuild: no longer fails if source directory path contains braces
    (closes: 726458)

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 17 Oct 2013 22:24:25 +0200

dh-python (1.20131003-1) unstable; urgency=low

  * Revert python-docutils build dependency change (to avoid circular
    dependencies)
  * Install PyDist fallback files

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 03 Oct 2013 18:06:37 +0200

dh-python (1.20130917-1) unstable; urgency=low

  * dh_python{2,3}:
    - bump minimum required python{,3}:any version to workaround #723586
    - generate :any dependencies to specify range of supported Python versions
      (doesn't include extensions case), closes: 723070

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 17 Sep 2013 19:29:05 +0200
